<resources>
    <string name="app_name">基合定位</string>
    <string name="confirm_exit">您确定要退出本程序吗？</string>
    <string name="notice">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="welcome">欢迎使用思凯微软件！</string>
    <string name="title_activity_navi">导航界面</string>
    <string name="title_activity_baidu_trace">BaiduTraceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="function_map">定位功能</string>
    <string name="function_photo">拍照功能</string>
    <string name="function_scan">扫描功能</string>
    <string name="function_wifi">Wifi通信</string>
    <string name="function_blue_tooth">蓝牙通信</string>
    <string name="function_browse_folder">浏览文档</string>
    <string name="function_setting">系统设置</string>
    <string name="toggle_map_type">切换地图类型</string>
    <string name="switch_trace_mode">开/关随行模式</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="admin_off_line_map">离线地图管理</string>
    <string name="about_us">关于我们</string>
    <string name="system_setting">系统设置</string>
    <string name="update_available">可升级</string>
    <string name="info">查看</string>
    <string name="delete">删除</string>
    <string name="update">更新</string>
    <string name="local_off_line_maps">本地离线地图</string>
    <string name="down_load_off_line_maps">离线地图下载</string>
    <string name="start_down_load">下载</string>
    <string name="pause">暂停</string>
    <string name="current_city">当前城市</string>
    <string name="hot_cities">热门城市</string>
    <string name="city_list">城市列表</string>
    <string name="set_serial_port">GPS模块串口设置</string>
    <string name="serial_port_not_authorized">没有串口权限。</string>
    <string name="serial_port_path">串口路径</string>
    <string name="serial_port_baud_rate">波特率</string>
    <string name="path">路径</string>
    <string name="port_message">当前串口数据</string>
    <string name="toggle_cd_radio_mode">启动思凯定位</string>
    <string name="please_turn_off_cd_radio">请先关闭CDRadio模式！</string>
    <string name="toggle_baidu_mode">启动百度定位</string>
    <string name="current_serial_port_path">串口路径:</string>
    <string name="current_serial_port_bd_rate">波特率：</string>
    <string name="reset_serial_port">串口重设</string>
    <string name="loc_mode_baidu">百度定位：</string>
    <string name="loc_mode_cd_radio">思凯定位：</string>
    <string name="serial_port_success">串口设置成功。</string>
    <string name="deciphering_port_data">正在持续监听GPS模块定位数据......</string>
    <string name="explain_permissions">为了运行本程序的定位及读写数据功能，需要获得以下系统权限：</string>
    <string name="permission_choose_to_grant_or_quit">点击确定重新申请以上权限，点击取消退出本程序。</string>
    <string name="quit_to_set_permissions">您已经永久禁用了系统获取以上部分或全部权限，请到系统设置-应用管理中授权本程序获取相关权限后再重新运行本程序。</string>
    <string name="prompt_to_set_serial_port">当前串口无效，请到“系统设置->北斗模块串口设置”中重新设置本机与GPS定位模块的串口连接。</string>
    <string name="eagle_system_open">鹰眼系统启动。</string>
    <string name="eagle_system_close">鹰眼系统关闭</string>
    <string name="invalid_fix_quality">无效</string>
    <string name="gps_fix_quality">单点</string>
    <string name="dgps_fix_quality">伪距</string>
    <string name="flaot_fix_quality">浮点</string>
    <string name="rtk_fix_quality">固定</string>
    <string name="default_fix_quality">缺省</string>
    <string name="mark_trace_mode">自动描轨</string>
    <string name="start_marking_trace_mode">显示移动轨迹。</string>
    <string name="stop_marking_trace_mode">停止显示轨迹。</string>
    <string name="not_enough_loc_points">坐标数量不足，未能形成轨迹。</string>
    <string name="save_route_points">保存轨迹数据</string>
    <string name="input_data_name">输入名称</string>
    <string name="route_point_name">轨迹名称</string>
    <string name="warning_invalid_input">输入无效</string>
    <string name="duplicate_data">已经存在同名文件，请另选名称。</string>
    <string name="save_success">保存成功。</string>
    <string name="save_fails">保存失败！</string>
    <string name="route_records">历史路径</string>
    <string name="warning_clear_trace">您确定要清除当前轨迹数据吗？点击确定将丢失该部分数据。</string>
    <string name="show_route_record">显示历史轨迹</string>
    <string name="no_route_record">路径记录为空。</string>
    <string name="clear_route_record">关闭历史轨迹</string>
    <string name="exit">退出</string>
    <string name="no_data">无数据</string>
    <string name="function_satellite_map">卫星分布</string>
    <string name="available_satellite_count">卫星个数</string>
    <string name="advise_to_open_gps">当前GPS未开启，为了正常使用本功能，强烈建议你现在启动GPS。点击确定将进入设置页面。</string>
    <string name="malfunction_for_gps_not_available">卫星定位功能无法生效，请开启GPS后重试。</string>
    <string name="toggle_eagle_mode">启动/关闭鹰眼系统</string>
    <string name="record_current_position">记录当前位置</string>
    <string name="save_location">保存位置</string>
    <string name="catalogue">所属分类：</string>
    <string name="catalogue_admin">管理分类</string>
    <string name="location_name">标记名称：</string>
    <string name="icon_style">标记样式：</string>
    <string name="coordinate">精确坐标：（纬度、经度、海拔）</string>
    <string name="save">保存</string>
    <string name="photo">拍照</string>
    <string name="gallery">图库</string>
    <string name="latitude">纬度(N)：</string>
    <string name="longitude">经度(E)：</string>
    <string name="altitude">海拔(M)：</string>
    <string name="comments">备注：</string>
    <string name="current_location_is_null">当前位置为空值，请有效定位后再尝试。</string>
    <string name="hint_enter_title">请输入标题</string>
    <string name="hint_enter_comments">请输入备注</string>
    <string name="tag_admin">分类管理</string>
    <string name="add_loc_tag">添加标记分类</string>
    <string name="hint_press_add_loc_tag">请点击“添加标记分类”按钮</string>
    <string name="tag_name">分类名称</string>
    <string name="tag_id">标记ID（可选）</string>
    <string name="input_id">输入ID</string>
    <string name="add_loc_tag_success">添加标记成功！</string>
    <string name="add_loc_tag_fail">添加标记失败。</string>
    <string name="name">名称</string>
    <string name="warning_exceed_len_limit">字符串超出最大长度。</string>
    <string name="warning_exceed_id_limit">ID取值范围错误。</string>
    <string name="hint_string_len_no_more_than_15">必须小于16个字符</string>
    <string name="hint_id_range_1_99">ID范围1~99</string>
    <string name="edit_loc_tag">修改标记</string>
    <string name="alter_loc_tag_success">修改标记成功！</string>
    <string name="alter_loc_tag_fail">修改标记失败。</string>
    <string name="please_select">请选择操作：</string>
    <string name="warning_delete_loc_tag">删除该标识后，此分类下的数据将归属为未分类，是否确定删除？</string>
    <string name="delete_loc_tag_success">删除标识成功！</string>
    <string name="delete_loc_tag_fail">删除标识失败。</string>
    <string name="choose_pic_source">选择图片来源</string>
    <string name="warning_sd_card_not_mounted">请确认SD被正常装载。</string>
    <string name="site_photo">现场图片：</string>
    <string name="warning_delete_loc_photo">你确定要删除此图片吗？</string>
    <string name="submit_success">提交成功！</string>
    <string name="submit_fails">提交失败！</string>
    <string name="location_records">历史记录</string>
    <string name="history_location">位置记录</string>
    <string name="history_routes">历史路径</string>
    <string name="default_tag_name">默认分类</string>
    <string name="warning_delete_loc_record">你确定要删除该历史记录吗？</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_fails">删除失败。</string>
    <string name="record_count">记录数量</string>
    <string name="delete_db">清理数据库</string>
    <string name="add_loc_record_mannually">手工增加位置</string>
    <string name="warning_delete_all_loc_record">你确认要删除所有历史位置的记录吗？此操作不可逆转。</string>
    <string name="loc_record_count">记录数量：</string>
    <string name="location_detail">位置详情</string>
    <string name="edit">编辑</string>
    <string name="edit_location">编辑位置</string>
    <string name="site_photos">现场图片</string>
    <string name="tag_description">地址分类：</string>
    <string name="no_pic">无图片</string>
    <string name="location_title">位置名称：</string>
    <string name="switch_to_normal_map_type">切换为一般地图</string>
    <string name="switch_to_satellite_map_type">切换为卫星地图</string>
    <string name="confirm_if_to_add_location_record">你确定要把此地址添加到位置记录中吗？</string>
    <string name="length">长度：</string>
    <string name="meter">m</string>
    <string name="acreage">面积：</string>
    <string name="square_metre">㎡</string>
    <string name="waring_conflict_with_mapping_mode">请先关闭测量模式。</string>
    <string name="map_by_navi">自动测量</string>
    <string name="map_by_user">手动测量</string>
    <string name="add_mapping_coordinate">增加坐标</string>
    <string name="edit_coord">编辑坐标</string>
    <string name="waring_clear_unsave_mapping_data">关闭测量模式后将清空目前测量数据，您仍要退出吗？</string>
    <string name="perimeter">周长：</string>
    <string name="distance">路径长度：</string>
    <string name="moving_path_length">径长：</string>
    <string name="panorama_view">全景静态图</string>
    <string name="mapping_data_title">标题：</string>
    <string name="mapping_data_perimeter">周长：</string>
    <string name="mapping_data_area">面积：</string>
    <string name="mapping_data_date">日期：</string>
    <string name="mapping_data_list">测量记录</string>
    <string name="edit_mapping_data">编辑测量数据</string>
    <string name="save_mapping_data">保存测量数据</string>
    <string name="mapping_data">测量数据</string>
    <string name="hint_enter_mapping_title">请输入标题</string>
    <string name="hint_enter_mapping_comments">备注（可选）</string>
    <string name="fail_to_fetch_relevant_addr_info">无该地信息</string>
    <string name="tag">分类：</string>
    <string name="title_activity_save_mapping_data">SaveMappingDataActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mapping_data_basic_data">基本数据</string>
    <string name="mapping_data_map_display">地图展示</string>
    <string name="mapping_data_pics">图片设置</string>
    <string name="address_optional">地址（可选）：</string>
    <string name="hint_enter_address">请输入地址</string>
    <string name="adjacent_optional">周边描述（可选）：</string>
    <string name="hint_enter_something">请输入内容</string>
    <string name="comments_optional">备注（可选）：</string>
    <string name="define_new_tag">新建分类</string>
    <string name="warning_empty_input_is_not_allowed">输入值不能为空！</string>
    <string name="warning_null_tag_is_not_allowed">标识不能为空！</string>
    <string name="data_generate_at">数据生成日期：</string>
    <string name="mapping_coordinate">坐标明细</string>
    <string name="options">请选择操作</string>
    <string name="insert_latlng">插入新坐标</string>
    <string name="available_locations">本地历史位置</string>
    <string name="warning_location_record_is_empty">无历史位置记录。</string>
    <string name="coordinate_changes">坐标已经同步修正。</string>
    <string name="measure_result">测量结果</string>
    <string name="please_long_click_to_add_latlng">请长按地图生成坐标。</string>
    <string name="title_activity_view_full_pic">ViewFullPicActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pic_detail">图片明细</string>
    <string name="warning_keep_at_least_one_coordinate">当前坐标数量不能低于1。</string>
    <string name="save_cancel">您取消了保存。</string>
    <string name="no_available_address">无地址信息</string>
    <string name="tag_by_type">按定义分类</string>
    <string name="tag_by_date">按日期分类</string>
    <string name="hint_you_have_cancled_the_operation">操作取消。</string>
    <string name="unknown_address">未知地址</string>
    <string name="mapping_data_detail">测量记录明细</string>
    <string name="address">地址：</string>
    <string name="base_locations_count">标点：</string>
    <string name="less_than_10"><![CDATA[<10]]></string>
    <string name="less_than_20"><![CDATA[<20]]></string>
    <string name="less_than_30"><![CDATA[<30]]></string>
    <string name="less_than_50"><![CDATA[<50]]></string>
    <string name="more_than_50"><![CDATA[>=50]]></string>
    <string name="admin_location_tag">地址分类管理</string>
    <string name="admin_mapping_data_tag">测绘分类管理</string>
</resources>