<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_toggle_cd_radio_mode"
        android:title="@string/toggle_cd_radio_mode"
        android:icon="@drawable/radio_antenna_open"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_toggle_mapping_mode"
        android:title="@string/record_current_position"
        android:icon="@drawable/ic_mapping_mode_off"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_save_current_position"
        android:title="@string/record_current_position"
        android:icon="@drawable/selector_ic_pin_current_positon"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_toggle_navi_mode"
        android:title="@string/switch_trace_mode"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_navi_mode_on"/>
    <item
        android:id="@+id/menu_toggle_map_type"
        android:title="@string/toggle_map_type"
        app:showAsAction="never"
        android:icon="@drawable/ic_map_type_satellite"/>
    <item
        android:id="@+id/menu_toggle_display_current_trace"
        android:title="@string/mark_trace_mode"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_trace_mode_on"/>
    <item
        android:id="@+id/menu_show_route_record"
        android:title="@string/show_route_record"
        app:showAsAction="never"
        android:icon="@drawable/ic_trace_mode_on"/>
    <item
        android:id="@+id/menu_clear_route_record"
        android:title="@string/clear_route_record"
        app:showAsAction="never"
        android:icon="@drawable/ic_trace_mode_on"/>

</menu>
