<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skycaster.geomapper.activity.SettingsActivity"
    android:padding="@dimen/padding_navigation_main"
    android:orientation="vertical">

    <TextView
        android:onClick="toOffLineMapSetting"
        style="@style/TextViewSettingStyle"
        android:text="@string/admin_off_line_map"/>

    <TextView
        android:onClick="toLocationTagAdmin"
        style="@style/TextViewSettingStyle"
        android:text="@string/admin_location_tag"/>

    <TextView
        android:onClick="toMappingDataTagAdmin"
        style="@style/TextViewSettingStyle"
        android:text="@string/admin_mapping_data_tag"/>

    <TextView
        android:onClick="toSerialPortSetting"
        style="@style/TextViewSettingStyle"
        android:text="@string/set_serial_port"/>

    <TextView
        android:onClick="toCDRadioSetting"
        style="@style/TextViewSettingStyle"
        android:text="CDRadio模块串口设置"/>

    <TextView
        android:onClick="toAboutUs"
        style="@style/TextViewSettingStyle"
        android:text="@string/about_us"/>

</LinearLayout>
