<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_toggle_cd_radio_mode"
        android:title="@string/toggle_cd_radio_mode"
        android:icon="@drawable/radio_antenna_open"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_toggle_eagle_mode"
        android:title="@string/toggle_cd_radio_mode"
        android:icon="@drawable/ic_eagle_on"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_toggle_trace_mode"
        android:title="@string/switch_trace_mode"
        app:showAsAction="always"
        android:icon="@drawable/ic_trace_mode_off"/>
    <item
        android:id="@+id/menu_toggle_map_type"
        android:title="@string/toggle_map_type"
        app:showAsAction="always"
        android:icon="@drawable/ic_map_type_satellite"/>
</menu>
