<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:id="@+id/activity_save_location_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/shape_white"
        android:padding="@dimen/padding_size_type_1"
        android:layout_margin="@dimen/layout_margin_type_2"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                style="@style/TextViewStyleSaveLocationActivity"/>
            <EditText
                android:id="@+id/activity_save_location_edt_loc_title"
                style="@style/EditTextStyleSaveLocationActivity"
                android:maxLines="1"
                android:hint="@string/hint_enter_title"/>
            <TextView
                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/catalogue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/activity_save_location_spin_loc_catalogue"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_gravity="bottom"
                   />

                <Button
                    android:id="@+id/activity_save_location_btn_admin_loc_tags"
                    android:layout_gravity="center"
                    style="@style/ButtonStyleLocationActivity"/>
            </LinearLayout>

            <TextView
                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/icon_style"/>

            <RadioGroup
                android:id="@+id/activity_save_location_icon_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_size_type_1">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_pin_1"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_pin_2"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_pin_3"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_pin_4"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_pin_5"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_pin_6"/>
            </RadioGroup>

            <TextView

                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/latitude"/>
            <EditText
                android:id="@+id/activity_save_location_edt_latitude"
                style="@style/EditTextStyleSaveLocationActivity"
                android:inputType="number"
                />


            <TextView
                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/longitude"/>
            <EditText
                android:id="@+id/activity_save_location_edt_longitude"
                style="@style/EditTextStyleSaveLocationActivity"
                android:inputType="number"
                />


            <TextView
                android:id="@+id/activity_save_location_tv_altitude"
                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/altitude"/>
            <EditText
                android:id="@+id/activity_save_location_edt_altitude"
                style="@style/EditTextStyleSaveLocationActivity"
                android:inputType="number"
                />

            <TextView
                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/comments"/>

            <EditText
                android:id="@+id/activity_save_location_edt_comments"
                style="@style/EditTextStyleSaveLocationActivity"
                android:hint="@string/hint_enter_comments"/>

            <TextView
                style="@style/TextViewStyleSaveLocationActivity"
                android:text="@string/site_photo"/>

            <com.skycaster.geomapper.customized.FullLengthListView
                android:id="@+id/activity_save_location_lst_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/activity_save_location_btn_save"
            style="@style/ButtonStyleLocationActivity"
            android:text="@string/save"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/activity_save_location_btn_photo"
            style="@style/ButtonStyleLocationActivity"
            android:text="@string/photo"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/activity_save_location_btn_gallery"
            style="@style/ButtonStyleLocationActivity"
            android:text="@string/gallery"/>

    </LinearLayout>


</LinearLayout>