<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewSettingStyle"
            android:text="@string/save_mapping_data"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/margin_smallest"
            android:padding="@dimen/padding_size_type_4"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/TextViewSettingStyle"
                android:text="@string/mapping_data_title"
                android:gravity="center"
                android:layout_margin="@dimen/margin_smallest"
                android:padding="@dimen/padding_size_type_4"
                android:textSize="@dimen/sp_15"/>

            <EditText
                android:id="@+id/dialog_save_mapping_data_edt_input_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp_15"
                android:maxLines="1"
                android:gravity="center"
                android:hint="@string/hint_enter_mapping_title"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/TextViewSettingStyle"
                android:text="@string/comments"
                android:gravity="center"
                android:layout_margin="@dimen/margin_smallest"
                android:padding="@dimen/padding_size_type_4"
                android:textSize="@dimen/sp_15"/>

            <EditText
                android:id="@+id/dialog_save_mapping_data_edt_input_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_enter_mapping_comments"
                android:textSize="@dimen/sp_15"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_save_mapping_data_btn_confirm"
                android:layout_margin="@dimen/margin_smallest"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:textSize="@dimen/sp_18"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="@color/selector_white_to_yellow"
                android:background="@drawable/selector_primary_to_primary_dark"/>

            <Button
                android:id="@+id/dialog_save_mapping_data_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:textSize="@dimen/sp_18"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_margin="@dimen/margin_smallest"
                android:textColor="@color/selector_white_to_yellow"
                android:background="@drawable/selector_primary_to_primary_dark"/>

        </LinearLayout>
    </LinearLayout>



</FrameLayout>