<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_add_loc_tag_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewSettingStyle"
            android:text="@string/add_loc_tag"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/margin_smallest"
            android:padding="@dimen/padding_size_type_4"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/TextViewSettingStyle"
                android:text="@string/tag_name"
                android:gravity="center"
                android:layout_margin="@dimen/margin_smallest"
                android:padding="@dimen/padding_size_type_4"
                android:textSize="@dimen/text_size_type_2"/>

            <EditText
                android:id="@+id/dialog_add_loc_tag_edt_input_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_type_2"
                android:hint="@string/hint_string_len_no_more_than_15"
                android:maxLines="1"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_add_loc_tag_ll_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/TextViewSettingStyle"
                android:text="@string/tag_id"
                android:gravity="center"
                android:layout_margin="@dimen/margin_smallest"
                android:padding="@dimen/padding_size_type_4"
                android:textSize="@dimen/text_size_type_2"/>

            <EditText
                android:id="@+id/dialog_add_loc_tag_edt_input_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_type_2"
                android:hint="@string/hint_id_range_1_99"
                android:gravity="center"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_add_loc_tag_btn_confirm"
                android:layout_margin="@dimen/margin_smallest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="@color/selector_white_to_yellow"
                android:background="@drawable/selector_primary_to_primary_dark"/>

            <Button
                android:id="@+id/dialog_add_loc_tag_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_margin="@dimen/margin_smallest"
                android:textColor="@color/selector_white_to_yellow"
                android:background="@drawable/selector_primary_to_primary_dark"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>